--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Yong Zhang"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://bylore.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "bylore/bylore.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -24,7 +24,7 @@ author:
   avatar           : "profile-20240823.png"
   name             : "Yong Zhang"
   pronouns         : # example: "she/her"  
-  bio              : "Assistant professor in solid mechanics"
+  bio              : "Assistant Professor and PhD. in Solid Mechanics"
   location         : "Shanghai, China"
   employer         : "Tongji University"
   uri              : # URL
