--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,8 +23,8 @@ main:
   - title: "CV"
     url: /cv/
 
-  #- title: "中文"
-  #  url: /chinese/
+  - title: "中文"
+    url: /chinese/
     
   #- title: "Guide"
   #  url: /markdown/
